// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelItemDetail when hovering with a category renders a hovered channel item detail 1`] = `
<div
  class="css-view-1dbjc4n"
  data-testid="channel-item-detail"
  style="padding: 5px 10px 5px 10px; width: 400px;"
>
  <div
    aria-hidden="true"
    class="css-text-901oao css-textOneLine-bfa6kz r-fontWeight-vw2c0b"
    dir="auto"
    style="color: rgb(250, 249, 250); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 16px; line-height: 1.5;"
  >
    We Gaming &lt;3 
  </div>
  <div
    class="css-view-1dbjc4n r-flexDirection-18u37iz"
  >
    <div
      class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
      data-testid="channel-item-detail-broadcaster"
      style="display: block; height: 38px; width: 38px;"
    >
      <div
        class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
        style="background-image: url(profiles/cef31105-8a6e-4211-a74b-2f0bbd9791fb-profile_image-150x150.png);"
      />
      <img
        alt=""
        class="css-accessibilityImage-9pa8cd"
        draggable="false"
        src="profiles/cef31105-8a6e-4211-a74b-2f0bbd9791fb-profile_image-150x150.png"
      />
    </div>
    <div
      class="css-view-1dbjc4n r-flex-13awgt0"
      style="margin-left: 5px;"
    >
      <div
        class="css-text-901oao css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(218, 216, 222); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
        Ninja
      </div>
      <div
        class="css-text-901oao css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(218, 216, 222); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
        Fortnite
      </div>
    </div>
  </div>
</div>
`;

exports[`ChannelItemDetail when hovering without a category renders a hovered channel item detail 1`] = `
<div
  class="css-view-1dbjc4n"
  data-testid="channel-item-detail"
  style="padding: 5px 10px 5px 10px; width: 400px;"
>
  <div
    aria-hidden="true"
    class="css-text-901oao css-textOneLine-bfa6kz r-fontWeight-vw2c0b"
    dir="auto"
    style="color: rgb(250, 249, 250); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 16px; line-height: 1.5;"
  >
    We Gaming &lt;3 
  </div>
  <div
    class="css-view-1dbjc4n r-flexDirection-18u37iz"
  >
    <div
      class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
      data-testid="channel-item-detail-broadcaster"
      style="display: block; height: 38px; width: 38px;"
    >
      <div
        class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
        style="background-image: url(profiles/cef31105-8a6e-4211-a74b-2f0bbd9791fb-profile_image-150x150.png);"
      />
      <img
        alt=""
        class="css-accessibilityImage-9pa8cd"
        draggable="false"
        src="profiles/cef31105-8a6e-4211-a74b-2f0bbd9791fb-profile_image-150x150.png"
      />
    </div>
    <div
      class="css-view-1dbjc4n r-flex-13awgt0"
      style="margin-left: 5px;"
    >
      <div
        class="css-text-901oao css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(218, 216, 222); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
        Ninja
      </div>
      <div
        class="css-text-901oao css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(218, 216, 222); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
         
      </div>
    </div>
  </div>
</div>
`;

exports[`ChannelItemDetail when not hovering with a category renders a channel item detail 1`] = `
<div
  class="css-view-1dbjc4n"
  data-testid="channel-item-detail"
  style="padding: 5px 10px 5px 10px; width: 400px;"
>
  <div
    aria-hidden="true"
    class="css-text-901oao css-textOneLine-bfa6kz r-fontWeight-vw2c0b"
    dir="auto"
    style="color: rgb(25, 23, 28); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 16px; line-height: 1.5;"
  >
    We Gaming &lt;3 
  </div>
  <div
    class="css-view-1dbjc4n r-flexDirection-18u37iz"
  >
    <div
      class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
      data-testid="channel-item-detail-broadcaster"
      style="display: block; height: 38px; width: 38px;"
    >
      <div
        class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
        style="background-image: url(profiles/cef31105-8a6e-4211-a74b-2f0bbd9791fb-profile_image-150x150.png);"
      />
      <img
        alt=""
        class="css-accessibilityImage-9pa8cd"
        draggable="false"
        src="profiles/cef31105-8a6e-4211-a74b-2f0bbd9791fb-profile_image-150x150.png"
      />
    </div>
    <div
      class="css-view-1dbjc4n r-flex-13awgt0"
      style="margin-left: 5px;"
    >
      <div
        class="css-text-901oao css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
        Ninja
      </div>
      <div
        class="css-text-901oao css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
        Fortnite
      </div>
    </div>
  </div>
</div>
`;

exports[`ChannelItemDetail when not hovering without a category renders a channel item detail 1`] = `
<div
  class="css-view-1dbjc4n"
  data-testid="channel-item-detail"
  style="padding: 5px 10px 5px 10px; width: 400px;"
>
  <div
    aria-hidden="true"
    class="css-text-901oao css-textOneLine-bfa6kz r-fontWeight-vw2c0b"
    dir="auto"
    style="color: rgb(25, 23, 28); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 16px; line-height: 1.5;"
  >
    We Gaming &lt;3 
  </div>
  <div
    class="css-view-1dbjc4n r-flexDirection-18u37iz"
  >
    <div
      class="css-view-1dbjc4n r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
      data-testid="channel-item-detail-broadcaster"
      style="display: block; height: 38px; width: 38px;"
    >
      <div
        class="css-view-1dbjc4n r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-backgroundSize-4gszlv r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw"
        style="background-image: url(profiles/cef31105-8a6e-4211-a74b-2f0bbd9791fb-profile_image-150x150.png);"
      />
      <img
        alt=""
        class="css-accessibilityImage-9pa8cd"
        draggable="false"
        src="profiles/cef31105-8a6e-4211-a74b-2f0bbd9791fb-profile_image-150x150.png"
      />
    </div>
    <div
      class="css-view-1dbjc4n r-flex-13awgt0"
      style="margin-left: 5px;"
    >
      <div
        class="css-text-901oao css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
        Ninja
      </div>
      <div
        class="css-text-901oao css-textOneLine-bfa6kz"
        dir="auto"
        style="color: rgb(50, 47, 55); font-family: system-ui,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Ubuntu,'Helvetica Neue',sans-serif; font-size: 13px; line-height: 1.5;"
      >
         
      </div>
    </div>
  </div>
</div>
`;
